--- a/pro2.html
+++ b/pro2.html
@@ -58,7 +58,7 @@
         
         /* When you mouse over the navigation links, change their color */
         .overlay a:hover, .overlay a:focus {
-            color: #5CDB95;
+            color: #e46c2c;
         }
         
         /* Position the close button (top right corner) */
@@ -109,27 +109,25 @@
                 <!-- Overlay content -->
                 <div class = "overlay-content">
                   <a href = "index.html">Home</a>
-                  <a href = "howto.html">How To Use</a>
-                  <a href = "aboutUs.html">About Us</a>
-                  <a href = "contactus.html">Contact Us</a>
-                  <a href = "fullCalculator.html">Receipt Calculator</a>
-                  <a href = "feedback.html">User Feedback</a>
-                  <a href = "pro2.html">Pro Page</a>
+                  <a href = "contact.html">Contact</a>
+                  <a href = "#">Services</a>
+                  <a href = "songList.xml">SongsList XML</a>
+                  <a href = "hotdogs.html">Hot Dog</a>
                 </div>
             </div>
             <ul class="Logos">
-                <li class="companyName"><a href="#"></a>Billsplit</li>
-                <li class="logo"><a href="#"></a></li>
+                <li class="companyName"><a class="nostyle" href="index.html">Billsplit</a></li></a>
+                <a class="logo" href="index.html"></a>
                 <span id="not_mobile">
-                <li class="navItem"><a href="#">How to use</a></li>
-                <li class="navItem"><a href="#">About</a></li>
+                <li class="navItem"><a href="howto.html">How to use</a></li>
+                <li class="navItem"><a href="aboutUs.html">About</a></li>
                 </span>
             </ul>
             <ul class="NavLinks">
                 <span id="not_mobile">
-                <li class="attentionItem"><a href="#">Split a Reciept</a></li>
+                <li class="attentionItem"><a href="fullCalculator.html">Split a Reciept</a></li>
                 </span>
-                <a class="hamburger navbar-toggler" href="javascript:void(0);" class="icon" onclick="openNav()">
+                <a class="hamburger" href="javascript:void(0);" class="icon" onclick="openMenu()">
                     <i class="fa fa-bars"></i>
                 </a>
             </ul>
